--- a/index.html
+++ b/index.html
@@ -40,6 +40,33 @@
                 <p>O Financiamento privado por empresas de capital de risco caiu 50%.</p>
             </div>
         </section>
+
+        <section>
+            <div>
+                <img src="./assets/images/image-retro-pcs.jpg" alt="Imagem de Pcs Antigos">
+                <div>
+                    <strong>01</strong>
+                    <h2>Revivendo PCS antigos</h2>
+                    <p>E se PCs antigos pudessem receber peças modernas?</p>
+                </div>
+            </div>
+            <div>
+                <img src="./assets/images/image-top-laptops.jpg" alt="Imagem de um Teclado">
+                <div>
+                    <strong>02</strong>
+                    <h2>Top 10 Laptops de 2024</h2>
+                    <p>Nossas melhores escolhas para diversas necessidades.</p>
+                </div>
+            </div>
+            <div>
+                <img src="./assets/images/image-gaming-growth.jpg" alt="Imagem de Controle Voando em cima de uma mão">
+                <div>
+                    <strong>03</strong>
+                    <h2>O Crescimento dos Jogos</h2>
+                    <p>Com a pandemia tem gerado novas oportunidades.</p>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="script.js"></script>
 </body>
