Estilização do nav mobile

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         </button>
 
         <nav>
+            <button>
+                <img src="./assets/images/icon-menu-close.svg" alt="Botão X para fechar o menu">
+            </button>
+
             <a href="@">Home</a>
             <a href="@">Novo</a>
             <a href="@">Popular</a>
