--- a/index.html
+++ b/index.html
@@ -13,30 +13,41 @@
     <title>W. Notícias</title>
 </head>
 <body>
-    <header class="header-mobile">
+    <header>
         <img src="./assets/images/logo.svg" alt="Logo Do site de Notícias">
         <button>
             <img src="./assets/images/icon-menu.svg" alt="icone do meu Hamburguer">
         </button>
 
-        <nav>
+       
+
+        <nav class="mobile">
             <button>
                 <img src="./assets/images/icon-menu-close.svg" alt="Botão X para fechar o menu">
             </button>
 
-            <a href="@">Home</a>
-            <a href="@">Novo</a>
-            <a href="@">Popular</a>
-            <a href="@">Trending</a>
-            <a href="@">Categorias</a>
+            <a href="#">Home</a>
+            <a href="#">Novo</a>
+            <a href="#">Popular</a>
+            <a href="#">Trending</a>
+            <a href="#">Categorias</a>
+        </nav>
+        <nav class="desktop">
+            <a href="#">Home</a>
+            <a href="#">Novo</a>
+            <a href="#">Popular</a>
+            <a href="#">Trending</a>
+            <a href="#">Categorias</a>
         </nav>
     </header>
 
     <main>
         <section class="primeira-secao">
-            <img src="./assets/images/image-web-3-mobile.jpg" alt="Icone de Puzze Colorido">
-
-            <h1>O Futuro brilhante da Web 3.0?</h1>
+            <picture>
+                <source media="(min-width: 700px)" srcset="./assets/images/image-web-3-mobile.jpg">
+                <img src="./assets/images/image-web-3-mobile.jpg" alt="Icone de Puzze Colorido">
+            </picture>
+             <h1>O Futuro brilhante da Web 3.0?</h1>
             
             <p>Nós mergulhamos na próxima evolução da web que afirma devolver o poder das plataformas para as mãos das pessoas. Mas será que ela realmente está cumprindo sua promessa?</p>
             <button> Ler Mais </button>
